k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudhub-deployment
  namespace: cloudhub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudhub
  template:
    metadata:
      labels:
        app: cloudhub
    spec:
      containers:
        - name: cloudhub
          image: yassenmeckawy74/cloudhub-lms:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
