k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: fayen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
