k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fayen-service
  namespace: fayen
spec:
  type: ClusterIP
  selector:
    app: fayen
  ports:
    - port: 80
      targetPort: 80
